# Hetu

./: .gitignore  AGENTS.md  Hetu.slnx  LICENSE  README.md  README.zh-CN.md
.qwen/skills/auto-skill-hetu-implementation/: SKILL.md
design/: app.js  chat.html  export.html  graph.html  history.html  index.html  overview.html  search.html  settings.html  styles.css
docs/: PRD.md  implementation-status.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AiSettings.tsx  AppLayout.tsx  ApprovalPanel.tsx  ChatMessageArea.tsx  ChatSidebar.tsx  ChatTopicList.tsx  DatabaseSettings.tsx  ExportBackupPanel.tsx  HighlightText.tsx  MarkdownEditor.tsx  McpServerManager.tsx  MilkdownEditor.tsx  NoteList.tsx  (+7 more)
scripts/: desktop-dev.ps1  publish-backend.ps1  publish-backend.sh  start.ps1  start.sh  test-api.sh  test-mcp-server.js
shell/hetu-desktop/: README.md  index.html  package-lock.json  package.json
shell/hetu-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.fat.conf.json  tauri.slim.conf.json
shell/hetu-desktop/src-tauri/binaries/: .gitignore
shell/hetu-desktop/src-tauri/capabilities/: backend.json  default.json
shell/hetu-desktop/src-tauri/src/: backend.rs  lib.rs  main.rs
src/Hetu.Api/: Hetu.Api.csproj  Program.cs  appsettings.Development.json  appsettings.json
src/Hetu.Core/: Hetu.Core.csproj
src/Hetu.Infrastructure/: Hetu.Infrastructure.csproj
src/Hetu.Infrastructure.PostgresMigrations/: Hetu.Infrastructure.PostgresMigrations.csproj
(+337 files in other folders)
